# hawking

./: .gitignore  README.md  deploy_docs.sh  pyproject.toml
core/: build_report.py  quality.py  render_svg.py  report.py  s3.py  viz.py
docs/: .gitignore  _quarto.yml  index.qmd
exploration/: adipell_ensayo_guatemala.ipynb  adipell_granel.ipynb  adipell_honduras.ipynb  adipell_sultana.ipynb  alcon_production_qa.ipynb  aliforte_production.ipynb  avipaz_microbiology_overview.ipynb  bios_microbiologia_log_ufc.ipynb  bios_microbiologia_prevalencia.ipynb  bios_segundo_experimento_adiflow.ipynb  cental_ganadera_microbiologia_overview.ipynb  comayma_adiflow.ipynb  comayma_consolidado_ensayo_inhimol.ipynb  comayma_micotoxinas.ipynb  comayma_microbiologia.ipynb  comayma_microbiologia_adiflow.ipynb  comayma_segundo_ensayo_inhimol.ipynb  comayma_tercer_ensayo_inhimol.ipynb  costa_rica_microbiologia.ipynb  ecuador_ensayo_rehumectante.ipynb  el_dorado_rendering.ipynb  el_dorado_seguimiento_orp.ipynb  exp__plantilla_personal.ipynb  exp_aliforte_prod_reprocesos.ipynb  exp_central_ganadera_tiempos.ipynb  exp_nutrinor_qa_data.ipynb  exp_plantilla_product.ipynb  exp_raza_historia_eficiencia.ipynb  fazenda_efecto_adiflow_en_sackoff.ipynb  fortidex_harina_camaron.ipynb  nutrinor_production_overview.ipynb  okuo_experimento_harinas_ninfa.ipynb  okuo_hacienda_humedades_feder.ipynb  okuo_impact_adiflow_production_raza_eng.ipynb  okuo_microbiologia_log_ufc.ipynb  okuo_primer_ensayo_acidez_h2o.ipynb  okuo_production.ipynb  okuo_segundo_ensayo_acidez_h2o.ipynb  okuo_sensores_ph_orp_granja_experimental.ipynb  raza_enfoque_humedad_junio.ipynb  (+4 more)
reports/: informe_adipell_granel.html  (+39 more)
(+79 files in other folders)
