[project]
name = "Galileo"
version = "0.0.1"
description = "Data analysis and automated report generation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.14.0",
    "boto3>=1.42.17",
    "fsspec>=2025.12.0",
    "ipykernel>=7.1.0",
    "ipynbname>=2025.8.0.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numba>=0.63.1",
    "numpy<2.4",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandera>=0.27.1",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "s3fs>=0.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "graphviz>=0.20.3",
    "scikit-fda>=0.10.1",
    "pyxlsb>=1.0.10",
]
